--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ sysinfo.txt
 *.unitypackage
 INB305 Unity/Library/metadata/*
 INB305 Unity/Library/ScriptAssemblies/BuiltinAssemblies.stamp
+*.meta
